CarwashGUI/assets/style/mainstyle.css
html {
    
}
body {
    background-color: #22092C;
    width: 100vw;
    height: 100vh;
    margin: 0;
}
header {
    background-color: black;
    display: flex;
    flex-direction: row;
    max-height: 4%;
    justify-content: space-between;
    align-items: stretch;
}

* {
    --sb-track-color: #232E33;
    --sb-thumb-color: #be3144;
    --sb-size: 10px;
    scrollbar-color: var(--sb-thumb-color) 
        var(--sb-track-color);
  }
  
    *::-webkit-scrollbar {
    width: var(--sb-size);
    }
  
*::-webkit-scrollbar-track {
    background: var(--sb-track-color);
    border-radius: 10px;
}
  
*::-webkit-scrollbar-thumb {
    background: var(--sb-thumb-color);
    border-radius: 10px;
}

.ModuleContainer {
    box-sizing: border-box;
    padding: 10px;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
}
.ContentBox {
    display: flex;
    align-items: stretch;
    flex-direction: column;
    padding: 10px;
    min-width: 150px;
    min-height: 100px;
    max-height: 10vh;
    border-radius: 7px;
    background-color: #872341;
    box-shadow: 5px 3px 5px black;
}
.ContentBoxTopBar {
    display: flex;
    justify-content: left;
    flex-direction: row;
    max-height: 18%;
}
.ContentBoxBody {
    border-radius: 7px;
    background-color: #BE3144;
    height: 100%;
}

